added copy to edit form page

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <% } %>
         </div>
 
-        <h1 class="text-center">Update form </h1>
-
+        <h1 class="text-center">Update form</h1>
+        <h6 class="text-center">You can add custom questions that show up at the end of the form for rushes to fill out. It can be serious (e.g. major), or funny (e.g. "Describe Tim Tebow in 2 words")</h6>
         <form id="info" data-abide="ajax">
             </div>
                 <div id="custom-questions2">
@@ -389,7 +389,7 @@
                     <li><a href="/#/signup/<%=orgid%>">Invite</a></li>
                     <li><a href="/#/events">Events</a></li>
                     <li><a id="back-to-form" href="/#/form/<%=orgid%>">Rush Form</a></li>
-                    <li><a id="update-questions" href="/#/update/<%=orgid%>">Update</a></li>
+                    <li><a id="update-questions" href="/#/update/<%=orgid%>">Edit Form</a></li>
                     <li><a href="#" class="log-out">Log out</a></li>
                 </ul>
             </div>
@@ -401,7 +401,7 @@
                     <li><a href="/#/signup/<%=orgid%>">Invite</a></li>
                     <li><a href="/#/events">Events</a></li>
                     <li><a id="back-to-form" href="/#/form/<%=orgid%>">Rush Form</a></li>
-                    <li><a id="update-questions" href="/#/update/<%=orgid%>">Update</a></li>
+                    <li><a id="update-questions" href="/#/update/<%=orgid%>">Edit Form</a></li>
                     <li><a href="#" class="log-out">Log out</a></li>
                 </ul>
             </nav>
