--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <form class="signup-form">
                     <h2><%= orgName %> Sign Up</h2>
                     <% if(Parse.User.current()){ %>
-                    <div>Send this link to invite fellow members to the app, but keep it private within your organization</div>
+                    <div>Send this link (<a href="http://usehelios.com/#/signup/<%= org.id %>">http://usehelios.com/#/signup/<%= org.id %></a>) to invite fellow members to Helios, but keep it private within your organization. Anyone registered through this form can see your recruits and comments.</div>
                     <% } else { %>
                     <div>Helios is an app for organizations to keep track of their recruits. Sign up to view, vote, and comment</div>
                     <% } %>
