added webcam error message

--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
                     <a class="button camera" id="retake">RETAKE</a>
                 </div>
             </div>
+            <div id="webcam-error" class="row text-center hide">
+                <div class="small-12 medium-8 medium-offset-2 columns">
+                    Make sure that you have allowed webcam permissions. On Chrome, you can change this setting by clicking on the camera icon on the right side of the URL bar. You may have to refresh the page after changing the setting.
+                </div>
+            </div>
             <div class="row text-center">
                 <div class="medium-12 columns">
                     <button type="submit" class="button success" id="submit">SUBMIT</a>
