changed some copy

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <input type="datetime-local" autocorrect="off" autocapitalize="off" id="create-event-end-date" placeholder="Date" />
               <!--<input type="text" autocorrect="off" autocapitalize="off" id="signup-username" placeholder="Custom Question" />
               <button>Add question</button>-->
-              *If the date fields aren't working properly, please use Chrome or Safari
+              *The date fields will not work properly on Mozilla Firefox
               <div class="text-center"><button id="submit">Create</button></div>
             </form>
           </div>
