added file upload for android

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div id="custom-questions">
             </div>
 
-            <% if(/(iPad|iPhone|iPod)/g.test( navigator.userAgent )){ %>
+            <% if(/(Android|iPad|iPhone|iPod)/g.test( navigator.userAgent )){ %>
             <div class="row">
                 <div class="small-12 medium-8 medium-offset-2 columns">
                     <label>
