fixed sign up flow a bit

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         <input type="text" autocorrect="off" autocapitalize="off" id="login-username" placeholder="Username" />
                         <input type="password" id="login-password" placeholder="Password" />
                         <div class="text-center"><button>Log In</button></div>
+                        <a style="color:white">Forgot your password?</a>
                     </form>
                 </div>
             </div>
