fixed signup error display

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
           <div class="small-12 columns">
             <form class="signup-form">
               <h2>Sign Up</h2>
-              <div class="error" style="display:none"></div>
               <input type="text" id="signup-frat-name" placeholder="Organization Name" />
               <input type="text" autocorrect="off" autocapitalize="off" id="signup-name" placeholder="Name" />
               <input type="email" autocorrect="off" autocapitalize="off" id="signup-email" placeholder="Email Address" />
               <input type="text" autocorrect="off" autocapitalize="off" id="signup-username" placeholder="Username" />
               <input type="password" id="signup-password" placeholder="Create a Password" />
+              <div class="error" style="color:red;display:none;"></div>
               <div class="text-center"><button>Sign Up</button></div>
             </form>
           </div>
@@ -95,11 +95,11 @@
                     <% } else { %>
                     <div>Helios is an app for organizations to keep track of their recruits. Your organization is using it to manage their recruiting process. Sign up to view, vote, and comment</div>
                     <% } %>
-                    <div class="error" style="display:none"></div>
                     <input type="text" id="signup-member-name" placeholder="Name" />
                     <input type="text" autocorrect="off" autocapitalize="off" id="signup-email" placeholder="Email Address" />
                     <input type="text" autocorrect="off" autocapitalize="off" id="signup-username" placeholder="Choose a username" />
                     <input type="password" id="signup-password" placeholder="Create a password" />
+                    <div class="error" style="color:red;display:none"></div>
                     <div class="text-center"><button>Sign Up</button></div>
                 </form>
             </div>
