changed load all to load more

--- a/index.html
+++ b/index.html
@@ -449,12 +449,12 @@
         </div>-->
         <div class="row text-center">
             <div class="small-12 medium-offset-2 medium-8 columns">
-                <input class="search field" type="text" placeholder="Search">
-                <button class="search disabled">Search</button>
+                <input class="search field" id="search-textbox" type="text" placeholder="Search">
+                <button class="search" id="search-button">Search</button>
             </div>
         </div>
         <div id="rush-card-subview"></div>
-        <div class="text-center"><a id="loadAll" class="button">Load All</a></div>
+        <div class="text-center"><a id="loadAll" class="button">Load More</a></div>
     </script>
 
 
