added export feature

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="js/underscore.js"></script>
     <script src="//www.parsecdn.com/js/parse-1.2.13.min.js"></script>
-    <script src="js/rush.js"></script>
+    <script src="js/rush-min.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="/js/vendor/modernizr.js"></script>
     <link rel="stylesheet" href="css/responsive-nav.css">
@@ -105,6 +105,10 @@
                 </form>
             </div>
         </div>
+    </script>
+
+    <script type="text/template" id="export-template">
+
     </script>
 
     <script type="text/template" id="update-question-template">
