--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="js/underscore.js"></script>
     <script src="//www.parsecdn.com/js/parse-1.2.13.min.js"></script>
-    <script src="js/rush-min.js"></script>
+    <script src="js/rush.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="/js/vendor/modernizr.js"></script>
     <link rel="stylesheet" href="css/responsive-nav.css">
@@ -504,7 +504,7 @@
                         <i class="fi-mail contact-method"></i> <%= rushee.get('email') %>
                         </div>
                         <div class="small-12 medium-6 columns">
-                        <i class="fi-telephone contact-method"></i> <%= rushee.get('phonenumber') %>
+                        <i class="fi-telephone contact-method"></i> <%= phonenumber %>
                         </div>
                         <!--<div class="small-12 medium-4 columns">
                         <i class="fi-home contact-method"></i> <%= rushee.get('residence') %>
