--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="js/underscore.js"></script>
     <script src="//www.parsecdn.com/js/parse-1.2.13.min.js"></script>
-    <script src="js/rush.js"></script>
+    <script src="js/rush-min.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="/js/vendor/modernizr.js"></script>
     <link rel="stylesheet" href="css/responsive-nav.css">
@@ -68,7 +68,7 @@
               <input type="text" autocorrect="off" autocapitalize="off" id="signup-username" placeholder="Username" />
               <input type="password" id="signup-password" placeholder="Create a Password" />
               <div class="error" style="color:red;display:none;"></div>
-              <div class="text-center"><button>Sign Up</button></div>
+              <div class="text-center"><button class="button success">Sign Up</button></div>
             </form>
           </div>
         </div>
@@ -101,7 +101,7 @@
                     <input type="text" autocorrect="off" autocapitalize="off" id="signup-username" placeholder="Choose a username" />
                     <input type="password" id="signup-password" placeholder="Create a password" />
                     <div class="error" style="color:red;display:none"></div>
-                    <div class="text-center"><button>Sign Up</button></div>
+                    <div class="text-center"><button class="button success">Sign Up</button></div>
                 </form>
             </div>
         </div>
