--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="js/underscore.js"></script>
     <script src="//www.parsecdn.com/js/parse-1.2.13.min.js"></script>
-    <script src="js/rush-min.js"></script>
+    <script src="js/rush.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="/js/vendor/modernizr.js"></script>
     <link rel="stylesheet" href="css/responsive-nav.css">
@@ -868,7 +868,16 @@
 </div>
     </script>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-67014614-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     <script src="/js/vendor/fastclick.js"></script>
     <script src="/js/foundation.min.js"></script>
 </body>
