added back to login screen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="js/underscore.js"></script>
     <script src="//www.parsecdn.com/js/parse-1.2.13.min.js"></script>
-    <script src="js/rush.js"></script>
+    <script src="js/rush-min.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="/js/vendor/modernizr.js"></script>
     <link rel="stylesheet" href="css/responsive-nav.css">
@@ -33,7 +33,7 @@
     <script type="text/template" id="login-template">
         <div class="nav" id="header">
             <div class="small-12 columns">
-                <header><img src="images/logo_small_alt.png"></header>
+                <header><a href=""><img src="images/logo_small_alt.png"></a></header>
             </div>
         </div>
         <div id="login-wrapper">
