--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="error" style="display:none"></div>
                         <input type="text" autocorrect="off" autocapitalize="off" id="login-username" placeholder="Username" />
                         <input type="password" id="login-password" placeholder="Password" />
-                        <div class="text-center"><button>Log In</button></div>
+                        <div class="text-center"><button class="button">Log In</button></div>
                         <a style="color:white">Forgot your password?</a>
                     </form>
                 </div>
